--- a/Hotline/Storyboards/Base.lproj/Main.storyboard
+++ b/Hotline/Storyboards/Base.lproj/Main.storyboard
@@ -18,9 +18,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hij-XZ-gie">
-                                <rect key="frame" x="108.5" y="461.5" width="197" height="31"/>
+                                <rect key="frame" x="20" y="443.5" width="374" height="67"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="31" id="5wQ-P5-jCV"/>
+                                    <constraint firstAttribute="width" secondItem="Hij-XZ-gie" secondAttribute="height" multiplier="374:67" id="MuR-af-i7q"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="Simulate Incoming Call"/>
@@ -28,13 +28,21 @@
                                     <action selector="simulateCallAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c3V-nS-hZS"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tpd-iX-nIl">
-                                <rect key="frame" x="20" y="512.5" width="374" height="31"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="q9v-Yy-zvc">
+                                <rect key="frame" x="20" y="122" width="374" height="148"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="31" id="AbH-eZ-gyj"/>
+                                    <constraint firstAttribute="height" constant="148" id="QOp-Go-muc"/>
+                                    <constraint firstAttribute="width" secondItem="q9v-Yy-zvc" secondAttribute="height" multiplier="187:74" id="hYH-0E-Dl8"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tpd-iX-nIl">
+                                <rect key="frame" x="20" y="530.5" width="374" height="67"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Tpd-iX-nIl" secondAttribute="height" multiplier="374:67" id="LzU-vd-r3b"/>
+                                    <constraint firstAttribute="height" constant="67" id="d7o-3d-cxS"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Start Call"/>
+                                <buttonConfiguration key="configuration" style="gray" title="Start Call"/>
                                 <connections>
                                     <action selector="startCall:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WgL-MT-UEV"/>
                                 </connections>
@@ -43,11 +51,16 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Tpd-iX-nIl" secondAttribute="trailing" constant="20" id="AVb-gz-xqU"/>
-                            <constraint firstItem="Tpd-iX-nIl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="AgF-m3-vIk"/>
-                            <constraint firstItem="Tpd-iX-nIl" firstAttribute="top" secondItem="Hij-XZ-gie" secondAttribute="bottom" constant="20" id="cW3-He-QSl"/>
-                            <constraint firstItem="Hij-XZ-gie" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="fIl-yw-rn9"/>
-                            <constraint firstItem="Hij-XZ-gie" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="yZl-Y7-AZC"/>
+                            <constraint firstItem="Hij-XZ-gie" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="187:448" id="5dv-rZ-A3C"/>
+                            <constraint firstItem="q9v-Yy-zvc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="ADP-Zb-smq"/>
+                            <constraint firstItem="Tpd-iX-nIl" firstAttribute="top" secondItem="Hij-XZ-gie" secondAttribute="bottom" constant="20" id="Aj4-vY-7DI"/>
+                            <constraint firstItem="Hij-XZ-gie" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="BhT-na-vmP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="q9v-Yy-zvc" secondAttribute="trailing" constant="20" id="JDy-AO-f8a"/>
+                            <constraint firstItem="q9v-Yy-zvc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="MRc-zT-c9t"/>
+                            <constraint firstItem="q9v-Yy-zvc" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="187:448" id="OvI-0Y-QCO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Tpd-iX-nIl" secondAttribute="trailing" constant="20" id="fm6-cj-ZxP"/>
+                            <constraint firstItem="Hij-XZ-gie" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="kc4-UR-YdQ"/>
+                            <constraint firstItem="Tpd-iX-nIl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="mWk-rE-8vN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="l6l-Qr-tob"/>
@@ -58,7 +71,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="928" y="139"/>
+            <point key="canvasLocation" x="927.536231884058" y="138.61607142857142"/>
         </scene>
         <!--Meeting View Controller-->
         <scene sceneID="BRc-BS-fJY">
@@ -183,6 +196,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="logo" width="750" height="260"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
